--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,10 @@ dependencies:
   dio: ^5.1.2
   flutter_vlc_player: ^7.2.0
   wakelock: ^0.6.2
+  media_kit_libs_windows_video: ^1.0.2
+  media_kit_native_event_loop: ^1.0.6
+  webview_windows: ^0.2.2
+  window_manager: ^0.3.5
 
 dev_dependencies:
   flutter_test:
@@ -71,6 +75,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  msix: ^3.15.1
+  innosetup: ^0.1.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -111,3 +117,11 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+msix_config:
+  display_name: Luffy
+  publisher_display_name: Xminent
+  identity_name: com.xminent.luffy
+  msix_version: 1.0.0.0
+  logo_path: ./assets/images/logo.png
+  capabilities: internetClient
