--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,8 @@ dependencies:
   media_kit_native_event_loop: ^1.0.6
   webview_windows: ^0.2.2
   window_manager: ^0.3.5
+  universal_html: ^2.2.3
+  flutter_svg: ^2.0.7
 
 dev_dependencies:
   flutter_test:
@@ -89,8 +91,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  # - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/mal.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
