--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,13 +54,12 @@ dependencies:
   string_similarity: ^2.0.0
   dart_des: ^1.0.2
   cookie_jar: ^4.0.2
-  media_kit: ^0.0.7+1
-  media_kit_video: ^0.0.9
-  media_kit_libs_android_video: ^1.0.3
+  media_kit: ^1.1.0
+  media_kit_video: ^1.1.0
+  media_kit_libs_android_video: ^1.2.0
   dio: ^5.1.2
   flutter_vlc_player: ^7.2.0
-  wakelock: ^0.6.2
-  media_kit_libs_windows_video: ^1.0.2
+  media_kit_libs_windows_video: ^1.0.4
   media_kit_native_event_loop: ^1.0.6
   webview_windows: ^0.2.2
   window_manager: ^0.3.5
