--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,8 @@ dependencies:
   window_manager: ^0.3.5
   universal_html: ^2.2.3
   flutter_svg: ^2.0.7
+  carousel_slider: ^4.2.1
+  dio_cookie_manager: ^3.1.0+1
 
 dev_dependencies:
   flutter_test:
