--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,15 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  # --- Desktop-specific dependencies
+  media_kit: ^1.1.0
+  media_kit_video: ^1.1.0
+  media_kit_libs_video: ^1.0.1
+  media_kit_libs_windows_video: ^1.0.4
+  media_kit_native_event_loop: ^1.0.6
+  webview_windows: ^0.2.2
+  window_manager: ^0.3.5
+  # ---
   flutter_inappwebview: ^6.0.0-beta.22
   url_launcher: ^6.1.10
   http: ^0.13.5
@@ -54,19 +60,10 @@ dependencies:
   string_similarity: ^2.0.0
   dart_des: ^1.0.2
   cookie_jar: ^4.0.2
-  media_kit: ^1.1.0
-  media_kit_video: ^1.1.0
-  media_kit_libs_android_video: ^1.2.0
-  dio: ^5.1.2
-  flutter_vlc_player: ^7.2.0
-  media_kit_libs_windows_video: ^1.0.4
-  media_kit_native_event_loop: ^1.0.6
-  webview_windows: ^0.2.2
-  window_manager: ^0.3.5
-  universal_html: ^2.2.3
   flutter_svg: ^2.0.7
   carousel_slider: ^4.2.1
   dio_cookie_manager: ^3.1.0+1
+  dio: ^5.1.2
 
 dev_dependencies:
   flutter_test:
