feat: :sparkles: make main state global for dynamic theme/settings; add color logs; add UserSettings class; add ParallaxContainer; add debounce effect to search bar; add History screen; separate history and actual MyAnimeList; add YouTubeEmbed in Details; add mock settings to drawer; etc

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,12 +2,13 @@
   package="com.example.luffy">
   <uses-permission android:name="android.permission.INTERNET" />
   <application
-        android:label="Luffy"
+    android:label="Luffy"
     android:name="${applicationName}"
     android:icon="@mipmap/ic_launcher"
     android:roundIcon="@mipmap/ic_launcher_round">
     <activity
       android:name=".MainActivity"
+      android:supportsPictureInPicture="true"
       android:exported="true"
       android:launchMode="singleTop"
       android:theme="@style/LaunchTheme"
