--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,13 +46,10 @@ dependencies:
   dio: ^5.1.2
   flutter_displaymode: ^0.6.0
   flutter_html: ^3.0.0-beta.2
-  simple_pip_mode: ^0.8.0
-  better_player:
-    git:
-      url: https://github.com/tintran-dev/betterplayer.git
   hex: ^0.2.0
   color_log: ^0.0.6
-  wakelock: ^0.6.2
+  wakelock_plus: ^1.1.4
+  pointycastle: ^3.7.3
 
 dev_dependencies:
   flutter_test:
